docs/4.0/faq.md
# Frequently Asked Questions

&nbsp;

**What platforms does Vinyl support?**

Everything! You might run into edge cases on platforms that I don't regularly test; please [report any bugs](https://github.com/JujuAdams/Vinyl/issues) if and when you find them. Don't be surprised if you run into weird issues on HTML5 though.

&nbsp;

**What versions of GameMaker does Vinyl support?**

Version 4 of Vinyl primarily supports GameMaker LTS 2022, and in theory supports every version of GameMaker later than that. Later versions of GameMaker may change functionality in a way that Vinyl is not forwards-compatible with, but Vinyl uses only native GameMaker audio functions so is in the best possible position for long-term compatibility.

&nbsp;

**How is Vinyl licensed? Can I use it for commercial projects?**

[Vinyl is released under the MIT license](https://github.com/JujuAdams/Vinyl/blob/master/LICENSE). This means you can use it for whatever purpose you want, including commercial projects. It'd mean a lot to me if you'd drop my name in the credits (Juju Adams) and/or say thanks, but you're under no obligation to do so.

&nbsp;

**I think you're missing a useful feature and I'd like you to implement it!**

Great! Please make a [feature request](https://github.com/JujuAdams/Vinyl/issues). Feature requests make Vinyl a more fun tool to use and gives me something to think about when I'm bored on public transport.

&nbsp;

**I found a bug, and it both scares and mildly annoys me. What is the best way to get the problem solved?**

Please make a [bug report](https://github.com/JujuAdams/Vinyl/issues). I check GitHub every day and bug fixes usually go out a couple days after that. You can also grab me on the [Discord server](https://discord.gg/8krYCqr), but that's not a replacement for a nice clear bug report.

&nbsp;

**Who made Vinyl?**

Vinyl is built and maintained by [Juju](https://www.jujuadams.com/) who has been writing and rewriting audio systems for a long time. I've worked on a lot of [commercial GameMaker games](http://www.jujuadams.com/) over the years. Vinyl is the product of practical experience working as a consultant.

&nbsp;

**Can I send you donations? Are you going to start a Patreon?**

Thank you for wanting to show your appreciation - it really does mean a lot to me personally - but I'm fortunate enough to have a stable income from gamedev. I'm not looking to join Patreon as a creator at this moment in time. If you'd like to support my work then drop a credit in your game and/or give a shout-out on the social media platform of your choice.